<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_crea"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_crea" />
        <item
            android:id="@+id/nav_edita"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_edita" />
        <item
            android:id="@+id/nav_elimina"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_elimina" />
        <item
            android:id="@+id/nav_lista"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_lista" />
        <item
            android:id="@+id/nav_acercade"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_acercade" />
    </group>
</menu>